--- a/firmware/V1.2/Marlin-2.0.x-SKR-Mini-E3-V1.2/platformio.ini
+++ b/firmware/V1.2/Marlin-2.0.x-SKR-Mini-E3-V1.2/platformio.ini
@@ -321,10 +321,10 @@ lib_ignore        = Adafruit NeoPixel, SPI
 monitor_speed     = 115200
 
 [env:STM32F103RC_btt_512K]
-platform          = ststm32
+platform          = ststm32@<6.2.0
 board             = genericSTM32F103RC
+board_build.core  = maple
 board_upload.maximum_size=524288
-platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
   ${common.build_flags} -DDEBUG_LEVEL=0 -std=gnu++14 -DHAVE_SW_SERIAL -DSS_TIMER=4 -DSTM32_FLASH_SIZE=512
 build_unflags     = -std=gnu++11
@@ -335,6 +335,7 @@ lib_deps          = ${common.lib_deps}
   USBComposite for STM32F1@==0.91
 lib_ignore        = Adafruit NeoPixel, SPI
 monitor_speed     = 115200
+
 
 [env:STM32F103RC_btt_512K_USB]
 platform          = ststm32
